--- a/multimap/index.html
+++ b/multimap/index.html
@@ -24,7 +24,9 @@
 	<link rel="stylesheet" href="lib/Control.MiniMap.css" />
   	<link rel="stylesheet" href="lib/L.Control.Zoomslider.css" />
 	<link rel="stylesheet" href="lib/L.Control.Locate.css" />
-	<link rel="stylesheet" href="leaflet.measure/leaflet.measure.css" />
+	<link rel="stylesheet" href="lib/leaflet.measure.css" />
+	<link rel="stylesheet" href="lib/Leaflet.Coordinates-0.1.5.css" />
+	<link rel="stylesheet" href="lib/Leaflet.Coordinates-0.1.5.ie.css" />
 	<!-- Leaflet-Plugins (js) -->
 	<script src="lib/leaflet.measure.js"></script>
 	<script src="lib/styledLayerControl.js"></script>
@@ -34,6 +36,7 @@
 	<script src="lib/Control.MiniMap.js"></script>
     <script src="lib/L.Control.Zoomslider.js"></script>
 	<script src="lib/L.Control.Locate.js"></script>
+	<script src="lib/Leaflet.Coordinates-0.1.5.min.js"></script>
 	<!-- other plugins -->
 	<script src="lib/leaflet-google.js"></script>
 	<script src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
@@ -383,11 +386,9 @@
             //lokale tiles
 		var layerBasemapLocal = new L.TileLayer("tilecache-bs/{z}/{y}/{x}.png",
 		{maxZoom: maxzoom_osm, format: 'image/png', attribution: 'Kartendaten: © <a href="http://www.basemap.at">Basemap.at</a> (lokale Tiles)'});
-		//var layerOsmLocalOutdoor = new L.TileLayer("../tiles2/{z}/{x}/{y}.png",
-		//{maxZoom: maxzoom_osm, format: 'image/png', attribution: 'Kartendaten: © Openstreetmap.org (lokale Tiles)'});
-		//var layerOsmLocalCycle = new L.TileLayer("../tiles3/{z}/{x}/{y}.png",
-		//{maxZoom: maxzoom_osm, format: 'image/png', attribution: 'Kartendaten: © Openstreetmap.org (lokale Tiles)'});
-		
+		var layerBasemapOrthoLocal = new L.TileLayer("tilecache-bs-ortho/{z}/{y}/{x}.jpeg",
+		{maxZoom: maxzoom_osm, format: 'image/png', attribution: 'Kartendaten: © <a href="http://www.basemap.at">Basemap.at</a> (lokale Tiles)'});
+
 		//http://b.tiles.telegeography.com/maps/submarine-cable-map-2015/5/13/14.png
 		//var layerSubmCableUrl="http://{s}.tiles.telegeography.com/maps/submarine-cable-map-2015/{z}/{x}/{y}.png";
 		//var layerSubmCable = new L.TileLayer(layerSubmCableUrl,
@@ -421,14 +422,13 @@
 					//"Wikimapia": layerWikiMapia,
 				}
 			},
-			//{groupName : "OSM Local",
-			//	expanded : false,
-			//	layers    : {
-			//		"OSM local": layerOsmLocal,
-			//		"OSM local (outdoor)": layerOsmLocalOutdoor,
-			//		"OSM local (cylcle)": layerOsmLocalCycle,
-			//	}
-			//},
+			{groupName : "Lokal",
+				expanded : false,
+				layers    : {
+					"Basemap lokal":layerBasemapLocal,
+					"Basemap Luftbild lokal":layerBasemapOrthoLocal,
+				}
+			},
 			{groupName : "Standard Karten",
 				expanded : false,
 				layers    : {
@@ -472,7 +472,6 @@
 					"Mapbox Pirate Map": layerMapBoxPirate,
 					"Mapbox Bluemarbel 8 bit": layerMapBoxBlm8bit,
 					"Mapbox Populationfire": layerMapBoxPopFire,
-					"Basemap local":layerBasemapLocal,
 //					"GEBCO Ocean": layerGebco,
 //					"OSGeo Basic": layerOsGeoBasic,
 //                    "Yandex":layerYandex,
@@ -535,7 +534,7 @@
 				exclusive       	: false
 		};
 
-		map = new L.Map('map', {measureControl: true});
+		map = new L.Map('map');
 		map.attributionControl.setPrefix(false);
 		map.dragging.enable();
 		map.touchZoom.enable();
@@ -560,6 +559,17 @@
 		set_view();
 		
 		map.addControl(new L.Control.Scale({width: 250, position: 'bottomleft', imperial: false}));
+		L.control.marker().addTo(map);
+		map.addControl(L.control.measure());
+		L.control.coordinates({
+			position:"bottomleft",
+			decimals:4,
+			decimalSeperator:",",
+			labelTemplateLat:"Breite: {y} ",
+			labelTemplateLng:"Länge: {x} ",
+			useDMS:false,
+//			useLatLngOrder:true
+		}).addTo(map);
 		
 		var layersControl = L.Control.styledLayerControl(baseMaps, overlayMaps, options);
 		map.addControl(layersControl);
@@ -606,7 +616,7 @@
             }
 		});
 		
-		L.control.marker().addTo(map);
+
 		//map.addControl( new L.Control.Compass() );
 	</script>
 </body>
